--- a/index.html
+++ b/index.html
@@ -11,40 +11,40 @@
     <h1><a href="https://github.com/dramacode/Moliere">Molière</a> en XML/TEI sur Github</h1>
     <table class="sortable">
 <tr><th>date</th><th>pièce</th></tr>
-<tr><tr><td>1650</td><td><a href="moliere_jalousie-barbouille.xml">Jalousie du barbouillé (La)</a></td>
-<tr><tr><td>1650</td><td><a href="moliere_medecin-volant.xml">Médecin volant (Le)</a></td>
-<tr><tr><td>1655</td><td><a href="moliere_etourdi.xml">Étourdi (L’)</a></td>
-<tr><tr><td>1656</td><td><a href="moliere_depit-amoureux.xml">Dépit amoureux (Le)</a></td>
-<tr><tr><td>1659</td><td><a href="moliere_precieuses-ridicules.xml">Précieuses ridicules (Les)</a></td>
-<tr><tr><td>1660</td><td><a href="moliere_sganarelle.xml">Sganarelle</a></td>
-<tr><tr><td>1661</td><td><a href="moliere_dom-garcie-de-navarre.xml">Dom Garcie de Navarre</a></td>
-<tr><tr><td>1661</td><td><a href="moliere_ecole-des-maris.xml">École des maris (L’)</a></td>
-<tr><tr><td>1661</td><td><a href="moliere_facheux.xml">Fâcheux (Les)</a></td>
-<tr><tr><td>1662</td><td><a href="moliere_ecole-des-femmes.xml">École des femmes (L’)</a></td>
-<tr><tr><td>1663</td><td><a href="moliere_critique-ecole-des-femmes.xml">Critique de l’école des femmes (Les)</a></td>
-<tr><tr><td>1663</td><td><a href="moliere_impromptu-versailles.xml">Impromptu de Versailles (L’)</a></td>
-<tr><tr><td>1664</td><td><a href="moliere_mariage-force.xml">Mariage forcé (Le)</a></td>
-<tr><tr><td>1664</td><td><a href="moliere_princesse-elide.xml">Princesse d’Élide (La)</a></td>
-<tr><tr><td>1664</td><td><a href="moliere_tartuffe.xml">Tartuffe</a></td>
-<tr><tr><td>1665</td><td><a href="moliere_amour-medecin.xml">Amour médecin (L’)</a></td>
-<tr><tr><td>1683</td><td><a href="moliere_festin-de-pierre.xml">Festin de pierre (Le)</a></td>
-<tr><tr><td>1666</td><td><a href="moliere_medecin-malgre-lui.xml">Médecin malgré lui (Le)</a></td>
-<tr><tr><td>1666</td><td><a href="moliere_melicerte.xml">Mélicerte</a></td>
-<tr><tr><td>1666</td><td><a href="moliere_misanthrope.xml">Misanthrope (Le)</a></td>
-<tr><tr><td>1667</td><td><a href="moliere_sicilien.xml">Sicilien (Le)</a></td>
-<tr><tr><td>1668</td><td><a href="moliere_amphitryon.xml">Amphitryon</a></td>
-<tr><tr><td>1668</td><td><a href="moliere_avare.xml">Avare (L’)</a></td>
-<tr><tr><td>1668</td><td><a href="moliere_george-dandin.xml">George Dandin</a></td>
-<tr><tr><td>1669</td><td><a href="moliere_monsieur-pourceaugnac.xml">Monsieur de Pourceaugnac</a></td>
-<tr><tr><td>1670</td><td><a href="moliere_amants-magnifiques-livret.xml">Amants magnifiques (livret, Les)</a></td>
-<tr><tr><td>1670</td><td><a href="moliere_amants-magnifiques.xml">Amants magnifiques (Les)</a></td>
-<tr><tr><td>1670</td><td><a href="moliere_bourgeois-gentilhomme-livret.xml">Bourgeois gentilhomme (livret, Les)</a></td>
-<tr><tr><td>1670</td><td><a href="moliere_bourgeois-gentilhomme.xml">Bourgeois Gentilhomme (Le)</a></td>
-<tr><tr><td>1671</td><td><a href="moliere_comtesse-escarbagnas.xml">Comtesse d’Escarbagnas (La)</a></td>
-<tr><tr><td>1671</td><td><a href="moliere_fourberies-scapin.xml">Fourberies de Scapin (Les)</a></td>
-<tr><tr><td>1671</td><td><a href="moliere_psyche.xml">Psyché</a></td>
-<tr><tr><td>1672</td><td><a href="moliere_femmes-savantes.xml">Femmes savantes (Les)</a></td>
-<tr><tr><td>1675</td><td><a href="moliere_malade-imaginaire.xml">Malade imaginaire (Le)</a></td>
+<tr><td>1650</td><td><a href="moliere_jalousie-barbouille.xml">Jalousie du barbouillé (La)</a></td></tr>
+<tr><td>1650</td><td><a href="moliere_medecin-volant.xml">Médecin volant (Le)</a></td></tr>
+<tr><td>1655</td><td><a href="moliere_etourdi.xml">Étourdi (L’)</a></td></tr>
+<tr><td>1656</td><td><a href="moliere_depit-amoureux.xml">Dépit amoureux (Le)</a></td></tr>
+<tr><td>1659</td><td><a href="moliere_precieuses-ridicules.xml">Précieuses ridicules (Les)</a></td></tr>
+<tr><td>1660</td><td><a href="moliere_sganarelle.xml">Sganarelle</a></td></tr>
+<tr><td>1661</td><td><a href="moliere_dom-garcie-de-navarre.xml">Dom Garcie de Navarre</a></td></tr>
+<tr><td>1661</td><td><a href="moliere_ecole-des-maris.xml">École des maris (L’)</a></td></tr>
+<tr><td>1661</td><td><a href="moliere_facheux.xml">Fâcheux (Les)</a></td></tr>
+<tr><td>1662</td><td><a href="moliere_ecole-des-femmes.xml">École des femmes (L’)</a></td></tr>
+<tr><td>1663</td><td><a href="moliere_critique-ecole-des-femmes.xml">Critique de l’école des femmes (Les)</a></td></tr>
+<tr><td>1663</td><td><a href="moliere_impromptu-versailles.xml">Impromptu de Versailles (L’)</a></td></tr>
+<tr><td>1664</td><td><a href="moliere_mariage-force.xml">Mariage forcé (Le)</a></td></tr>
+<tr><td>1664</td><td><a href="moliere_princesse-elide.xml">Princesse d’Élide (La)</a></td></tr>
+<tr><td>1664</td><td><a href="moliere_tartuffe.xml">Tartuffe</a></td></tr>
+<tr><td>1665</td><td><a href="moliere_amour-medecin.xml">Amour médecin (L’)</a></td></tr>
+<tr><td>1683</td><td><a href="moliere_festin-de-pierre.xml">Festin de pierre (Le)</a></td></tr>
+<tr><td>1666</td><td><a href="moliere_medecin-malgre-lui.xml">Médecin malgré lui (Le)</a></td></tr>
+<tr><td>1666</td><td><a href="moliere_melicerte.xml">Mélicerte</a></td></tr>
+<tr><td>1666</td><td><a href="moliere_misanthrope.xml">Misanthrope (Le)</a></td></tr>
+<tr><td>1667</td><td><a href="moliere_sicilien.xml">Sicilien (Le)</a></td></tr>
+<tr><td>1668</td><td><a href="moliere_amphitryon.xml">Amphitryon</a></td></tr>
+<tr><td>1668</td><td><a href="moliere_avare.xml">Avare (L’)</a></td></tr>
+<tr><td>1668</td><td><a href="moliere_george-dandin.xml">George Dandin</a></td></tr>
+<tr><td>1669</td><td><a href="moliere_monsieur-pourceaugnac.xml">Monsieur de Pourceaugnac</a></td></tr>
+<tr><td>1670</td><td><a href="moliere_amants-magnifiques-livret.xml">Amants magnifiques (livret, Les)</a></td></tr>
+<tr><td>1670</td><td><a href="moliere_amants-magnifiques.xml">Amants magnifiques (Les)</a></td></tr>
+<tr><td>1670</td><td><a href="moliere_bourgeois-gentilhomme-livret.xml">Bourgeois gentilhomme (livret, Les)</a></td></tr>
+<tr><td>1670</td><td><a href="moliere_bourgeois-gentilhomme.xml">Bourgeois Gentilhomme (Le)</a></td></tr>
+<tr><td>1671</td><td><a href="moliere_comtesse-escarbagnas.xml">Comtesse d’Escarbagnas (La)</a></td></tr>
+<tr><td>1671</td><td><a href="moliere_fourberies-scapin.xml">Fourberies de Scapin (Les)</a></td></tr>
+<tr><td>1671</td><td><a href="moliere_psyche.xml">Psyché</a></td></tr>
+<tr><td>1672</td><td><a href="moliere_femmes-savantes.xml">Femmes savantes (Les)</a></td></tr>
+<tr><td>1675</td><td><a href="moliere_malade-imaginaire.xml">Malade imaginaire (Le)</a></td></tr>
     </table>
     </article>
     </main>
