normalisation des <speaker>

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <main id="center">
     <article id="article">
-    <h1><a href="https://github.com/dramacode/Moliere">Molière</a> en XML/TEI sur Github</h1>
+    <h1><a href="https://github.com/dramacode/moliere">Molière</a> en XML/TEI sur Github</h1>
     <table class="sortable">
 <tr><th>date</th><th>pièce</th></tr>
 <tr><td>1650</td><td><a href="moliere_jalousie-barbouille.xml">Jalousie du barbouillé (La)</a></td></tr>
